DATA-1801 apply IPP in group of lines